# fixreader

./: .gitignore  Cargo.toml  Exemplo de mensagens RFQ.txt  FIX.xml  FIX44RFQ.xml  README.md  details.html  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.rs  main.tsx  schema.rs
src-tauri/: Cargo.toml  FIX44RFQ.xml  config.json  tauri.conf.json
src-tauri/src/: cache.rs  converter.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/models/: error.rs  message.rs  schema.rs
src-tauri/src/services/: app.rs  cache.rs  converter.rs  mod.rs
src/details/: Details.css  Details.tsx  main.tsx
src/form/: form.css  form.tsx
src/messageList/: messageList.css  messageList.tsx
src/models/: FixMsg.ts
