[package]
name = "fixreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.178", features = ["derive"] }
